--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,7 @@
 name: CI
+permissions:
+  contents: read
+  pull-requests: write
 on:
   push:
     branches: [main]
@@ -6,8 +9,35 @@ on:
     branches: [main]
 
 jobs:
+  go_lint:
+    name: Go Lint
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup Go
+        uses: actions/setup-go@v5
+        with:
+          go-version-file: backend/go.mod
+          cache-dependency-path: backend/go.sum
+      - name: Cache Go modules
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-gomod-${{ hashFiles('backend/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-gomod-
+      - name: Install golangci-lint
+        run: |
+          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v2.7.2
+      - name: Run lint
+        run: golangci-lint run
+        working-directory: backend
+
   next_lint:
     name: Next Lint
+    needs: go_lint
     runs-on: ubuntu-latest
     strategy:
       matrix:
