--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,13 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "@apollo/client": "latest",
-    "focus-trap-react": "latest"
+    "@langchain/core": "latest",
+    "@langchain/openai": "latest",
+    "langchain": "latest",
+    "react-markdown": "latest",
+    "remark-gfm": "latest",
+    "rehype-highlight": "latest",
+    "remark-breaks": "latest"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
